--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
     <!-- TOPBAR -->
     <div class="topbar" aria-label="Barra informativa">
       <div class="topbar-inner">
-        <span>🚀 Curso oficial 100% online • Proceso ágil 24–48 hs • Carnet con vigencia hasta 3 años</span>
+        <span> Curso oficial 100% online • Proceso ágil 24–48 hs • Carnet con vigencia hasta 3 años</span>
       </div>
     </div>
 
@@ -1015,8 +1015,13 @@
 
     <!-- WhatsApp Floating -->
     <div class="whatsapp-floating">
-      <a href="#" onclick="openWhatsApp(); return false;" aria-label="Escribirme por WhatsApp">☎</a>
-    </div>
+    <a href="#" onclick="openWhatsApp(); return false;" aria-label="Escribirme por WhatsApp">
+      <svg viewBox="0 0 32 32" width="26" height="26" aria-hidden="true" focusable="false">
+        <path fill="currentColor" d="M16 3C9.4 3 4 8.4 4 15c0 2.1.6 4.2 1.7 6L4 29l8.2-1.7c1.8 1 3.8 1.5 5.8 1.5 6.6 0 12-5.4 12-12S22.6 3 16 3zm0 21.7c-1.8 0-3.6-.5-5.2-1.5l-.4-.2-4.9 1 1-4.8-.2-.4c-1-1.6-1.6-3.4-1.6-5.3 0-5.5 4.5-10 10-10s10 4.5 10 10-4.5 10-10 10zm5.6-7.3c-.3-.1-1.7-.8-2-.9-.3-.1-.5-.1-.7.2-.2.3-.8.9-1 1.1-.2.2-.4.2-.7.1-.3-.1-1.3-.5-2.4-1.6-.9-.8-1.5-1.8-1.7-2.1-.2-.3 0-.5.1-.6l.5-.6c.2-.2.2-.4.3-.6.1-.2 0-.4 0-.6 0-.1-.7-1.6-1-2.2-.3-.6-.6-.5-.7-.5h-.6c-.2 0-.6.1-.9.4-.3.3-1.2 1.2-1.2 2.9 0 1.7 1.2 3.3 1.4 3.5.2.2 2.4 3.6 5.9 5 .8.3 1.4.5 1.9.6.8.2 1.6.2 2.2.1.7-.1 1.7-.7 2-1.4.2-.7.2-1.3.2-1.4 0-.2-.3-.3-.6-.4z"/>
+      </svg>
+    </a>
+  </div>
+
   </div>
 
   <script>
