--- a/index.html
+++ b/index.html
@@ -863,7 +863,24 @@
             <div class="kicker">Empresas que ya acompañé</div>
             <p class="p-muted">Dejo espacio para que sumes logos (me los pasás y los coloco).</p>
 
-            <div class="logos" aria-label="Logos empresas (placeholders)">
+<div class="logos" aria-label="Logos empresas">
+  <div class="logo-slot">
+    <img src="assetslogoschn.jpg" alt="CHN Hormiga Negra" loading="lazy" />
+  </div>
+  <div class="logo-slot">
+    <img src="assetslogostransmeta.webp" alt="Transmeta" loading="lazy" />
+  </div>
+  <div class="logo-slot">
+    <img src="assetslogosla-panera-rosa.jpg" alt="La Panera Rosa" loading="lazy" />
+  </div>
+  <div class="logo-slot">
+    <img src="assetslogoschango-mas.png" alt="ChangoMás" loading="lazy" />
+  </div>
+  <div class="logo-slot">
+    <img src="assetslogosyaguar.webp" alt="Mayorista Yaguar" loading="lazy" />
+  </div>
+</div>
+<div class="logos" aria-label="Logos empresas (placeholders)">
               <div class="logo-slot">Logo 1</div>
               <div class="logo-slot">Logo 2</div>
               <div class="logo-slot">Logo 3</div>
