--- a/index.html
+++ b/index.html
@@ -434,7 +434,11 @@
       padding: 0.4rem;
       text-align: center;
     }
-    .logo-slot img { max-height: 34px; object-fit: contain; }
+    ..logo-slot img {
+  max-height: 40px;
+  width: 100%;
+  object-fit: contain;
+}
 
     /* Simple cards */
     .two-col {
