--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@
       font-weight: 900;
       letter-spacing: 0.08em;
       text-transform: uppercase;
-      margin-bottom: 0.85rem;
-    }
+      margin-bottom: 1.25rem;
+     position: relative;
+  z-index: 2;
+  }
 
     .h2 {
       font-size: 1.85rem;
