--- a/index.html
+++ b/index.html
@@ -422,6 +422,14 @@
       margin-top: 1.1rem;
       align-items: center;
     }
+    /* Ajuste de aire para sección de logos */
+.logos-kicker {
+  margin-bottom: 1.35rem !important; /* aire extra solo acá */
+}
+
+.logos-grid {
+  margin-top: 0.35rem; /* baja un poquito la fila */
+}
     .logo-slot {
       height: 54px;
       border-radius: 14px;
@@ -866,7 +874,9 @@
 
           <!-- Logos empresas -->
           <div style="margin-top: 1.6rem;">
-            <div class="kicker">Empresas que ya acompañé</div>    
+            <div class="kicker logos-kicker">Empresas que ya acompañé</div>
+<div class="logos logos-grid"> ... </div>
+<div class="kicker">Empresas que ya acompañé</div>    
 
 <div class="logos" aria-label="Logos empresas">
   <div class="logo-slot">
