--- a/index.html
+++ b/index.html
@@ -875,8 +875,7 @@
           <!-- Logos empresas -->
           <div style="margin-top: 1.6rem;">
             <div class="kicker logos-kicker">Empresas que ya acompañé</div>
-<div class="logos logos-grid"> ... </div>
-<div class="kicker">Empresas que ya acompañé</div>    
+<div class="logos logos-grid"> </div>
 
 <div class="logos" aria-label="Logos empresas">
   <div class="logo-slot">
