--- a/index.html
+++ b/index.html
@@ -738,6 +738,65 @@
       main { padding-inline: 1rem; }
       .logos { grid-template-columns: repeat(2, minmax(0, 1fr)); }
     }
+    /* Impacto +4000 carnets */
+.impact-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  align-items: center;
+  margin-top: 1.6rem;
+}
+
+.impact-number {
+  text-align: left;
+}
+
+.impact-badge {
+  display: inline-block;
+  font-size: 3.2rem;
+  font-weight: 980;
+  color: var(--color-green-dark);
+  padding: 0.45rem 1.2rem;
+  border: 4px solid var(--color-green);
+  border-radius: 999px;
+  box-shadow: 0 10px 30px rgba(22, 194, 131, 0.25);
+  margin-bottom: 0.6rem;
+}
+
+.impact-text {
+  font-size: 1.1rem;
+  font-weight: 900;
+  margin-bottom: 0.25rem;
+}
+
+.impact-sub {
+  color: var(--color-muted);
+  max-width: 26rem;
+}
+
+.impact-card {
+  display: flex;
+  justify-content: center;
+}
+
+.impact-card img {
+  max-width: 260px;
+  width: 100%;
+  border-radius: 18px;
+  box-shadow: 0 18px 42px rgba(0,0,0,0.18);
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .impact-grid {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .impact-number {
+    text-align: center;
+  }
+}
   </style>
 </head>
 
@@ -885,13 +944,7 @@
 
           <div class="proof">
             <div>
-              <div class="avatars-strip" aria-label="Espacio para fotos (placeholders)">
-                <div class="avatar"><img src="https://images.unsplash.com/photo-1544723795-3fb6469f5b39?auto=format&fit=crop&w=220&q=70" alt="Alumno/a" /></div>
-                <div class="avatar"><img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?auto=format&fit=crop&w=220&q=70" alt="Alumno/a" /></div>
-                <div class="avatar"><img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?auto=format&fit=crop&w=220&q=70" alt="Alumno/a" /></div>
-                <div class="avatar"><img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&w=220&q=70" alt="Alumno/a" /></div>
-                <div class="avatar"><img src="https://images.unsplash.com/photo-1524503033411-f65f5096f16b?auto=format&fit=crop&w=220&q=70" alt="Alumno/a" /></div>
-              </div>
+             
 
               <div class="split-cta" role="note" aria-label="Mensaje breve">
                 <div class="txt">¿Querés certificar a tu equipo? <span>Consultame por opción empresas.</span></div>
@@ -901,13 +954,19 @@
               </div>
             </div>
 
-            <aside class="stat" aria-label="Cifra destacada">
-              <div class="big">+4.000</div>
-              <div class="small">carnets gestionados</div>
-              <div style="height:0.65rem;"></div>
-              <div class="mini">Acompañamiento 1 a 1 por WhatsApp.</div>
-            </aside>
-          </div>
+<div class="impact-grid">
+  <!-- A: número -->
+  <div class="impact-number">
+    <div class="impact-badge">+4.000</div>
+    <div class="impact-text">carnets oficiales gestionados</div>
+    <p class="impact-sub">Acompañamiento personalizado 1 a 1 por WhatsApp.</p>
+  </div>
+
+  <!-- B: imagen del carnet -->
+  <div class="impact-card">
+    <img src="carnet-oficial.png" alt="Carnet Oficial de Manipulador de Alimentos">
+  </div>
+</div>
 
           <!-- Logos empresas -->
           <div style="margin-top: 1.6rem;">
