--- a/index.html
+++ b/index.html
@@ -941,55 +941,43 @@
             Sumate a quienes ya obtuvieron su <span style="color:var(--color-orange);">Carnet Oficial</span>
           </div>
           <p class="p-muted">Ya acompañé a miles de personas y equipos a certificar de forma simple y 100% online.</p>
+<!-- +4000 + Carnet (centrado) -->
+<div class="impact-center">
+  <div class="impact-grid">
+    <div class="impact-number">
+      <div class="impact-badge">+4.000</div>
+      <div class="impact-text">carnets oficiales gestionados</div>
+      <p class="impact-sub">Acompañamiento personalizado 1 a 1 por WhatsApp.</p>
+    </div>
 
-          <div class="proof">
-            <div>
-             
-
-              <div class="split-cta" role="note" aria-label="Mensaje breve">
-                <div class="txt">¿Querés certificar a tu equipo? <span>Consultame por opción empresas.</span></div>
-                <button class="btn btn-outline" type="button" onclick="openWhatsApp('Hola Roxana, quiero info para certificar a mi equipo (opción empresas).')">
-                  Consultar por WhatsApp
-                </button>
-              </div>
-            </div>
-
-<div class="impact-grid">
-  <!-- A: número -->
-  <div class="impact-number">
-    <div class="impact-badge">+4.000</div>
-    <div class="impact-text">carnets oficiales gestionados</div>
-    <p class="impact-sub">Acompañamiento personalizado 1 a 1 por WhatsApp.</p>
-  </div>
-
-  <!-- B: imagen del carnet -->
-  <div class="impact-card">
-    <img src="carnet-oficial.png" alt="Carnet Oficial de Manipulador de Alimentos">
+    <div class="impact-card">
+      <img src="carnet-oficial.png" alt="Carnet Oficial de Manipulador de Alimentos">
+    </div>
   </div>
 </div>
 
-          <!-- Logos empresas -->
-          <div style="margin-top: 1.6rem;">
-            <div class="kicker logos-kicker">Empresas que ya acompañé</div>
-<div class="logos logos-grid"> </div>
+<!-- CTA empresas (debajo) -->
+<div class="split-cta split-cta-stack" role="note" aria-label="Opción empresas">
+  <div class="txt">¿Querés certificar a tu equipo? <span>Consultame por opción empresas.</span></div>
+  <button class="btn btn-outline" type="button"
+    onclick="openWhatsApp('Hola Roxana, quiero info para certificar a mi equipo (opción empresas).')">
+    Consultar por WhatsApp
+  </button>
+</div>
 
-<div class="logos" aria-label="Logos empresas">
-  <div class="logo-slot">
-    <img src="assetslogoschn.jpg" alt="CHN Hormiga Negra" loading="lazy" />
-  </div>
-  <div class="logo-slot">
-    <img src="assetslogostransmeta.webp" alt="Transmeta" loading="lazy" />
-  </div>
-  <div class="logo-slot">
-    <img src="assetslogosla-panera-rosa.jpg" alt="La Panera Rosa" loading="lazy" />
-  </div>
-  <div class="logo-slot">
-    <img src="assetslogoschango-mas.png" alt="ChangoMás" loading="lazy" />
-  </div>
-  <div class="logo-slot">
-    <img src="assetslogosyaguar.webp" alt="Mayorista Yaguar" loading="lazy" />
+<!-- Logos -->
+<div style="margin-top: 1.6rem;">
+  <div class="kicker logos-kicker">Empresas que ya acompañé</div>
+
+  <div class="logos logos-grid" aria-label="Logos empresas">
+    <div class="logo-slot"><img src="assetslogoschn.jpg" alt="CHN Hormiga Negra" loading="lazy" /></div>
+    <div class="logo-slot"><img src="assetslogostransmeta.webp" alt="Transmeta" loading="lazy" /></div>
+    <div class="logo-slot"><img src="assetslogosla-panera-rosa.jpg" alt="La Panera Rosa" loading="lazy" /></div>
+    <div class="logo-slot"><img src="assetslogoschango-mas.png" alt="ChangoMás" loading="lazy" /></div>
+    <div class="logo-slot"><img src="assetslogosyaguar.webp" alt="Mayorista Yaguar" loading="lazy" /></div>
   </div>
 </div>
+         
       </section>
 
       <!-- ROXANA -->
