--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
 
 <!-- CTA empresas (debajo) -->
 <div class="split-cta split-cta-stack" role="note" aria-label="Opción empresas">
-  <div class="txt">¿Querés certificar a tu equipo? <span>Consultame por opción empresas.</span></div>
+  <div class="txt">¿Querés certificar a tu equipo? <span>Opciones para empresas.</span></div>
   <button class="btn btn-outline" type="button"
     onclick="openWhatsApp('Hola Roxana, quiero info para certificar a mi equipo (opción empresas).')">
     Consultar por WhatsApp
