--- a/index.html
+++ b/index.html
@@ -994,13 +994,16 @@
 </div>
 
 <!-- CTA empresas (debajo) -->
-<div class="split-cta split-cta-stack" role="note" aria-label="Opción empresas">
-  <div class="txt">¿Querés certificar a tu equipo? <span>Opciones para empresas.</span></div>
+<div class="split-cta split-cta-stack" role="note" aria-label="Mensaje breve">
+  <div class="txt">
+    ¿Querés certificar a tu equipo? <span>Opciones para empresas.</span>
+  </div>
   <button class="btn btn-outline" type="button"
-    onclick="openWhatsApp('Hola Roxana, quiero info para certificar a mi equipo (opción empresas).')">
-    Consultar por WhatsApp
+    onclick="openWhatsApp('Hola Roxana, quiero info sobre opciones para empresas.')">
+    Contactar por WhatsApp
   </button>
 </div>
+
 
 <!-- Logos -->
 <div style="margin-top: 1.6rem;">
