--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
   </div>
   <button class="btn btn-outline" type="button"
     onclick="openWhatsApp('Hola Roxana, quiero info sobre opciones para empresas.')">
-    Contactar por WhatsApp
+   Empresas · Contactar
   </button>
 </div>
 
