--- a/index.html
+++ b/index.html
@@ -1165,8 +1165,11 @@
       <section class="final-cta" aria-label="Llamado final a la acción">
         <div class="inner">
           <div>
-            <h3>¿Lista para sacar tu carnet oficial?</h3>
-            <p>Te acompaño de punta a punta: material claro, cuestionario online y gestión ágil (en general 24–48 hs).</p>
+            <h3>¿Listo para sacar tu carnet oficial?</h3>
+<p>
+  Te acompaño de principio a fin, hasta que obtenés tu carnet.
+  Material claro, cuestionario online y gestión rápida.
+</p>
           </div>
           <div class="actions">
             <button class="btn btn-primary" type="button" onclick="scrollToId('formulario')">Quiero mi carnet oficial</button>
