--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
     <!-- TOPBAR -->
     <div class="topbar" aria-label="Barra informativa">
       <div class="topbar-inner">
-        <span> Curso oficial 100% online • Proceso ágil 24–48 hs • Carnet con vigencia hasta 3 años</span>
+        <span> Curso oficial 100% online • Validez Nacional • Vigencia hasta 3 años</span>
       </div>
     </div>
 
