--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     :root {
       --color-orange: #f57c00;
       --color-orange-dark: #e96f00;
-      --color-green: #16c283;
-      --color-green-dark: #0e9361;
+      --color-green: #0fa37a;
+      --color-green-dark: #0b7d5f;
+
 
       --color-text: #1b1b1b;
       --color-muted: #6b6b6b;
