--- a/index.html
+++ b/index.html
@@ -890,13 +890,13 @@
     <!-- HEADER -->
     <header>
       <div class="header-inner">
-        <div class="brand" aria-label="Marca">
-          <div class="brand-logo" aria-hidden="true">R</div>
-          <div class="brand-text">
-            <span class="name">Roxana Furman</span>
-            <span class="tag">Seguridad alimentaria</span>
-          </div>
-        </div>
+       <a class="brand" href="#inicio" aria-label="Roxana Furman - Seguridad Alimentaria">
+  <img
+    class="brand-img"
+    src="roxana-logo.webp"
+    alt="Roxana Furman - Seguridad Alimentaria"
+  />
+</a>
 
         <div class="nav-actions">
           <button class="btn btn-outline" type="button" onclick="scrollToId('faq')">
