--- a/index.html
+++ b/index.html
@@ -874,6 +874,17 @@
   color: rgba(255,255,255,0.92);
   text-shadow: 0 10px 22px rgba(0,0,0,0.45);
 }
+    /* =========================
+   LOGO HEADER (ajuste tamaño)
+   ========================= */
+
+.brand-img {
+  height: 36px;     /* 👈 tamaño ideal desktop */
+  width: auto;
+  display: block;
+  object-fit: contain;
+}
+
 
   </style>
 </head>
