--- a/index.html
+++ b/index.html
@@ -874,16 +874,23 @@
   color: rgba(255,255,255,0.92);
   text-shadow: 0 10px 22px rgba(0,0,0,0.45);
 }
-    /* =========================
-   LOGO HEADER (ajuste tamaño)
+  /* =========================
+   LOGO HEADER (tamaño final)
    ========================= */
 
 .brand-img {
-  height: 36px;     /* 👈 tamaño ideal desktop */
+  height: 52px;          /* 👈 tamaño visible y elegante */
   width: auto;
   display: block;
   object-fit: contain;
 }
+    @media (max-width: 560px) {
+  .brand-img {
+    height: 44px;
+  }
+}
+
+
 
 
   </style>
