--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
        <a class="brand" href="#inicio" aria-label="Roxana Furman - Seguridad Alimentaria">
   <img
     class="brand-img"
-    src="roxana-logo.webp"
+    src="roxana-logo-horizontal.webp"
     alt="Roxana Furman - Seguridad Alimentaria"
   />
 </a>
