--- a/index.html
+++ b/index.html
@@ -983,8 +983,8 @@
                 <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1200&q=70" alt="" />
               </div>
               <div class="content">
-                <div class="title">2) Estudiás online</div>
-                <div class="desc">Te envío material fácil y claro para aprobar el cuestionario.</div>
+                <div class="title">2) Mirás los videos</div>
+                <div class="desc">Accedes a los contenidos online, sólo 7 videos.</div>
               </div>
             </article>
 
