--- a/index.html
+++ b/index.html
@@ -1089,11 +1089,34 @@
   <div class="kicker logos-kicker">Empresas que ya acompañé</div>
 
   <div class="logos logos-grid" aria-label="Logos empresas">
-    <div class="logo-slot"><img src="assetslogoschn.jpg" alt="CHN Hormiga Negra" loading="lazy" /></div>
-    <div class="logo-slot"><img src="assetslogostransmeta.webp" alt="Transmeta" loading="lazy" /></div>
-    <div class="logo-slot"><img src="assetslogosla-panera-rosa.jpg" alt="La Panera Rosa" loading="lazy" /></div>
-    <div class="logo-slot"><img src="assetslogoschango-mas.png" alt="ChangoMás" loading="lazy" /></div>
-    <div class="logo-slot"><img src="assetslogosyaguar.webp" alt="Mayorista Yaguar" loading="lazy" /></div>
+    <div class="logo-slot">
+      <img src="assetslogoschn.jpg" alt="CHN Hormiga Negra" loading="lazy" />
+    </div>
+
+    <div class="logo-slot">
+      <img src="assetslogostransmeta.webp" alt="Transmeta" loading="lazy" />
+    </div>
+
+    <div class="logo-slot">
+      <img src="assetslogosla-panera-rosa.jpg" alt="La Panera Rosa" loading="lazy" />
+    </div>
+
+    <div class="logo-slot">
+      <img src="assetslogoschango-mas.png" alt="ChangoMás" loading="lazy" />
+    </div>
+
+    <div class="logo-slot">
+      <img src="assetslogosyaguar.webp" alt="Mayorista Yaguar" loading="lazy" />
+    </div>
+
+    <!-- Nuevos logos -->
+    <div class="logo-slot">
+      <img src="logo-godblessyou.png" alt="God Bless You - Aceite de coco" loading="lazy" />
+    </div>
+
+    <div class="logo-slot">
+      <img src="logo-lodejesus.webp" alt="Lo de Jesús - Delivery" loading="lazy" />
+    </div>
   </div>
 </div>
          
