--- a/index.html
+++ b/index.html
@@ -418,42 +418,56 @@
     }
     .split-cta .txt span { color: var(--color-orange-dark); }
 
-    /* Logos empresas */
-    .logos {
-      display: grid;
-      grid-template-columns: repeat(6, minmax(0, 1fr));
-      gap: 0.8rem;
-      margin-top: 1.1rem;
-      align-items: center;
-    }
-    /* Ajuste de aire para sección de logos */
+/* =========================
+   LOGOS EMPRESAS
+   ========================= */
+
+.logos {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 arriba */
+  gap: 2rem 2.4rem;                      /* aire pro */
+  align-items: center;
+  justify-items: center;
+}
+
+/* Ajuste de aire para sección de logos */
 .logos-kicker {
-  margin-bottom: 1.35rem !important; /* aire extra solo acá */
+  margin-bottom: 1.35rem !important;
 }
 
 .logos-grid {
-  margin-top: 0.35rem; /* baja un poquito la fila */
+  margin-top: 0.35rem;
 }
-    .logo-slot {
-  height: 96px;                 /* 👈 más alto = más logo */
-  border-radius: 0;             /* sin tarjeta */
-  background: transparent;      /* fondo limpio */
-  border: none;                 /* ❌ chau línea punteada */
+
+.logo-slot {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.3rem;              /* menos padding */
-}
-    .logo-slot img {
-  max-height: 80px;     /* 👈 antes seguro estaba en 40–60 */
-  width: auto;
-  max-width: 100%;
-  object-fit: contain;
-}
-.logos {
-  gap: 1.2rem;   /* antes 0.8rem */
+  background: transparent;
+  border: none;
+  padding: 0;
 }
 
+.logo-slot img {
+  max-height: 72px;
+  max-width: 180px;
+  width: auto;
+  object-fit: contain;
+}
+
+/* =========================
+   CENTRADO DE ÚLTIMA FILA (3 LOGOS)
+   ========================= */
+
+.logos > :nth-last-child(-n + 3) {
+  grid-column: span 1;
+}
+
+@media (min-width: 769px) {
+  .logos > :nth-last-child(3):first-child {
+    grid-column: 2 / span 1;
+  }
+}
 
     /* Simple cards */
     .two-col {
