--- a/index.html
+++ b/index.html
@@ -1129,6 +1129,10 @@
     </div>
 
     <div class="logo-slot">
+  <img src="logo-foodservices.png" alt="Food Services" loading="lazy" />
+</div>
+
+    <div class="logo-slot">
       <img src="logo-lodejesus.webp" alt="Lo de Jesús - Delivery" loading="lazy" />
     </div>
   </div>
