--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,7 @@
     </div>
 
     <div class="logo-slot">
-  <img src="logo-foodservices.png" alt="Food Services" loading="lazy" />
+  <img src="logo-foodservices.jpg" alt="Food Services" loading="lazy" />
 </div>
 
     <div class="logo-slot">
