--- a/index.html
+++ b/index.html
@@ -449,12 +449,18 @@
 }
 
 .logo-slot img {
-  max-height: 72px;
-  max-width: 180px;
+  max-height: 88px;
+  max-width: 220px;
   width: auto;
   object-fit: contain;
 }
-
+/* Mobile */
+@media (max-width: 560px) {
+  .logo-slot img {
+    max-height: 64px;
+    max-width: 180px;
+  }
+}
 /* =========================
    CENTRADO DE ÚLTIMA FILA (3 LOGOS)
    ========================= */
