--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
   <div class="impact-grid">
     <div class="impact-number">
       <div class="impact-badge">+4.000</div>
-      <div class="impact-text">carnets oficiales gestionados</div>
+      <div class="impact-text">Carnets oficiales gestionados</div>
       <p class="impact-sub">Acompañamiento personalizado 1 a 1 por WhatsApp.</p>
     </div>
 
