--- a/index.html
+++ b/index.html
@@ -930,6 +930,134 @@
     max-width: 260px;
   }
 }
+/* =========================
+   IMPACTO / TRUST BAR (PRO)
+   ========================= */
+
+.trust-impact{
+  margin-top: 1.35rem;
+  display: grid;
+  grid-template-columns: minmax(0, 1.1fr) minmax(0, 0.9fr);
+  gap: 1.25rem;
+  align-items: center;
+}
+
+.trust-badge{
+  background: rgba(255,255,255,0.92);
+  border: 1px solid rgba(0,0,0,0.05);
+  box-shadow: 0 12px 28px rgba(0,0,0,0.07);
+  border-radius: 22px;
+  padding: 1.15rem 1.2rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.trust-badge::before{
+  content:"";
+  position:absolute;
+  inset:auto -120px -120px auto;
+  width: 360px;
+  height: 220px;
+  border-radius: 34px;
+  background: rgba(22,194,131,0.14);
+  transform: rotate(-10deg);
+}
+
+.trust-badge .kicker-mini{
+  display: inline-flex;
+  align-items: center;
+  gap: .5rem;
+  font-size: .8rem;
+  font-weight: 950;
+  letter-spacing: .08em;
+  text-transform: uppercase;
+  color: var(--color-orange-dark);
+  background: rgba(245,124,0,0.10);
+  padding: .25rem .65rem;
+  border-radius: 999px;
+  margin-bottom: .75rem;
+  position: relative;
+  z-index: 1;
+}
+
+.trust-badge .big-number{
+  font-size: 2.6rem;
+  line-height: 1;
+  font-weight: 980;
+  letter-spacing: -0.03em;
+  color: var(--color-green-dark);
+  margin-bottom: .35rem;
+  position: relative;
+  z-index: 1;
+}
+
+.trust-badge .big-number span{
+  color: var(--color-orange);
+}
+
+.trust-badge .desc{
+  color: var(--color-muted);
+  font-weight: 800;
+  position: relative;
+  z-index: 1;
+}
+
+.trust-cards{
+  display: grid;
+  gap: .9rem;
+}
+
+.trust-card{
+  background: rgba(255,255,255,0.92);
+  border: 1px solid rgba(0,0,0,0.05);
+  box-shadow: 0 12px 28px rgba(0,0,0,0.07);
+  border-radius: 22px;
+  padding: 1rem 1.05rem;
+  display: flex;
+  gap: .85rem;
+  align-items: center;
+}
+
+.trust-icon{
+  width: 46px;
+  height: 46px;
+  border-radius: 16px;
+  display: grid;
+  place-items: center;
+  flex: 0 0 auto;
+  background: rgba(22,194,131,0.12);
+  color: var(--color-green-dark);
+  border: 1px solid rgba(22,194,131,0.18);
+}
+
+.trust-card:nth-child(2) .trust-icon{
+  background: rgba(245,124,0,0.12);
+  color: var(--color-orange-dark);
+  border: 1px solid rgba(245,124,0,0.18);
+}
+
+.trust-card .t-title{
+  font-weight: 950;
+  color: #232323;
+  margin-bottom: .15rem;
+}
+
+.trust-card .t-sub{
+  color: var(--color-muted);
+  font-weight: 800;
+  font-size: .95rem;
+}
+
+/* Responsive */
+@media (max-width: 980px){
+  .trust-impact{
+    grid-template-columns: minmax(0, 1fr);
+  }
+  .trust-badge .big-number{
+    font-size: 2.25rem;
+  }
+}
+    
 
 
 
@@ -985,6 +1113,46 @@
           </div>
         </div>
       </section>
+
+<!-- Impacto / Confianza -->
+<div class="trust-impact">
+  <div class="trust-badge">
+    <div class="kicker-mini">Carnets oficiales gestionados</div>
+    <div class="big-number"><span>+</span>4000</div>
+    <div class="desc">Personas certificadas con acompañamiento 100% online.</div>
+  </div>
+
+  <div class="trust-cards">
+    <div class="trust-card">
+      <div class="trust-icon" aria-hidden="true">
+        <!-- Ícono Argentina -->
+        <svg width="26" height="26" viewBox="0 0 24 24" fill="none">
+          <path d="M11 2l2 3-1 3 2 2-1 3 2 2-2 3 1 3-3-1-2-3 1-3-2-2 1-3-2-2 2-3-1-3 3 1z"
+                stroke="currentColor" stroke-width="1.8" stroke-linejoin="round"/>
+        </svg>
+      </div>
+      <div>
+        <div class="t-title">Validez Nacional</div>
+        <div class="t-sub">Válido en todo el país (Argentina).</div>
+      </div>
+    </div>
+
+    <div class="trust-card">
+      <div class="trust-icon" aria-hidden="true">
+        <!-- Ícono Calendario -->
+        <svg width="26" height="26" viewBox="0 0 24 24" fill="none">
+          <path d="M7 3v3M17 3v3M4 8h16M6 6h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2z"
+                stroke="currentColor" stroke-width="1.8" stroke-linecap="round"/>
+          <path d="M8 12h4M8 16h8" stroke="currentColor" stroke-width="1.8" stroke-linecap="round"/>
+        </svg>
+      </div>
+      <div>
+        <div class="t-title">3 años de vigencia</div>
+        <div class="t-sub">Tu carnet válido por 3 años.</div>
+      </div>
+    </div>
+  </div>
+</div>
 
       <!-- PASOS (subtítulo actualizado) -->
       <section id="pasos" class="block-wrap">
