--- a/index.html
+++ b/index.html
@@ -1284,6 +1284,7 @@
 </div>
  <!-- Barra de beneficios (como referencia) -->
 <div class="benefits-strip" aria-label="Beneficios del curso">
+
   <div class="benefit-item">
     <div class="benefit-ico" aria-hidden="true">
       <!-- Reloj -->
@@ -1300,10 +1301,23 @@
 
   <div class="benefit-item">
     <div class="benefit-ico" aria-hidden="true">
-      <!-- Argentina (silueta simple) -->
+      <!-- Argentina -->
       <svg viewBox="0 0 24 24" width="34" height="34" fill="none">
-        <path d="M12 2l2 3-1 3 2 2-1 3 2 2-2 3 1 3-3-1-2-3 1-3-2-2 1-3-2-2 2-3-1-3 3 1z"
-              stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
+        <path d="M13 2
+                 1.5 2
+                 -0.6 2.5
+                 1.2 2
+                 -0.8 2.6
+                 1 2.3
+                 -0.6 2.8
+                 1.2 2.4
+                 -0.7 3
+                 1.4 2.8
+                 -0.9 3.2"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"/>
       </svg>
     </div>
     <div class="benefit-text">Validez<br/>Nacional</div>
@@ -1337,7 +1351,9 @@
     </div>
     <div class="benefit-text">3 años de<br/>Vigencia</div>
   </div>
+
 </div>
+
          
 
 <!-- CTA empresas (debajo) -->
