--- a/index.html
+++ b/index.html
@@ -1302,35 +1302,12 @@
   <div class="benefit-sep" aria-hidden="true"></div>
 
   <div class="benefit-item">
-    <div class="benefit-ico" aria-hidden="true">
-      <!-- Argentina (silueta real + estable) -->
-      <svg viewBox="0 0 24 24" width="34" height="34" fill="none">
-        <path d="M12 2
-                 c-1.2 1.6-1.1 2.6-.7 3.5
-                 .4.8.1 1.4-.3 2.1
-                 -.4.7-.4 1.4.2 2.1
-                 .5.6.4 1.2-.1 2.0
-                 -.6 1-.2 1.9.3 2.6
-                 .5.7.6 1.4.1 2.3
-                 -.5 1-.4 1.8.2 2.5
-                 .6.8 1 1.9.7 2.9
-                 -.3 1.3-1.4 1.9-2.7 1.9
-                 -1.3 0-2.5-.6-2.8-1.9
-                 -.2-.8 0-1.5.4-2.2
-                 .5-.9.6-1.7.1-2.5
-                 -.5-.8-.6-1.6-.1-2.4
-                 .5-.8.7-1.4.1-2.2
-                 -.5-.7-.6-1.5-.2-2.3
-                 .4-.7.6-1.3.2-2.1
-                 -.4-.8-.6-1.5-.2-2.4
-                 .4-.8.7-1.5.3-2.3
-                 -.4-1-.2-2.3.8-3.7"
-              stroke="currentColor" stroke-width="2"
-              stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
-    </div>
-    <div class="benefit-text">Validez<br/>Nacional</div>
+  <div class="benefit-ico" aria-hidden="true" style="font-size: 32px; line-height: 1;">
+    🇦🇷
   </div>
+  <div class="benefit-text">Validez<br/>Nacional</div>
+</div>
+
 
   <div class="benefit-sep" aria-hidden="true"></div>
 
