--- a/index.html
+++ b/index.html
@@ -1192,8 +1192,8 @@
                 <img src="https://images.unsplash.com/photo-1521791055366-0d553872125f?auto=format&fit=crop&w=1200&q=70" alt="" />
               </div>
               <div class="content">
-                <div class="title">1) Te tomo los datos</div>
-                <div class="desc">Me enviás lo necesario y yo preparo tu alta para que empieces sin vueltas.</div>
+                <div class="title">1) Te envío el form</div>
+                <div class="desc">Completas un form simple de inscripción con tus datos.</div>
               </div>
             </article>
 
@@ -1203,7 +1203,7 @@
               </div>
               <div class="content">
                 <div class="title">2) Mirás los videos</div>
-                <div class="desc">Accedes a los contenidos online, sólo 7 videos.</div>
+                <div class="desc">Accedes agilmente a los contenidos online, sólo 7 videos.</div>
               </div>
             </article>
 
@@ -1213,7 +1213,7 @@
               </div>
               <div class="content">
                 <div class="title">3) Cuestionario + carnet</div>
-                <div class="desc">Completás el cuestionario online y yo gestiono tu carnet. Listo en 24–48 hs (en general).</div>
+                <div class="desc">Respondes el cuestionario de forma fácil.</div>
               </div>
             </article>
           </div>
