--- a/index.html
+++ b/index.html
@@ -1189,7 +1189,8 @@
           <div class="steps-grid" aria-label="Pasos del proceso">
             <article class="step-card">
               <div class="bg" aria-hidden="true">
-                <img src="https://images.unsplash.com/photo-1521791055366-0d553872125f?auto=format&fit=crop&w=1200&q=70" alt="" />
+                <img src="https://images.pond5.com/closeup-man-using-smartphone-light-footage-268361569_iconl.jpeg"
+     alt="Completar formulario desde el celular" />
               </div>
               <div class="content">
                 <div class="title">1) Te envío el form</div>
@@ -1199,7 +1200,8 @@
 
             <article class="step-card">
               <div class="bg" aria-hidden="true">
-                <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1200&q=70" alt="" />
+                <img src="https://plus.unsplash.com/premium_photo-1661721642083-89c56ed01673?fm=jpg&ixlib=rb-4.1.0&q=60&w=3000"
+     alt="Persona viendo videos educativos desde el celular con auriculares" />
               </div>
               <div class="content">
                 <div class="title">2) Mirás los videos</div>
@@ -1209,7 +1211,8 @@
 
             <article class="step-card">
               <div class="bg" aria-hidden="true">
-                <img src="https://images.unsplash.com/photo-1556745757-8d76bdb6984b?auto=format&fit=crop&w=1200&q=70" alt="" />
+               <img src="https://assets.mediamodifier.com/mockups/66a492e63bcd728497508bf5/modern-business-card-in-hand-mockup-with-bright-background_thumb.jpg"
+     alt="Carnet oficial o tarjeta entregada al finalizar el curso" />
               </div>
               <div class="content">
                 <div class="title">3) Cuestionario + carnet</div>
