--- a/index.html
+++ b/index.html
@@ -1211,8 +1211,8 @@
 
             <article class="step-card">
               <div class="bg" aria-hidden="true">
-               <img src="https://assets.mediamodifier.com/mockups/66a492e63bcd728497508bf5/modern-business-card-in-hand-mockup-with-bright-background_thumb.jpg"
-     alt="Carnet oficial o tarjeta entregada al finalizar el curso" />
+              <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1200&q=80"
+     alt="Persona trabajando en laptop" />
               </div>
               <div class="content">
                 <div class="title">3) Cuestionario + carnet</div>
