--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,7 @@
 
             <article class="step-card">
               <div class="bg" aria-hidden="true">
-              <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1200&q=80"
+              <img src="https://freerangestock.com/sample/168135/man-working-on-laptop-in-bright-office.jpg"
      alt="Persona trabajando en laptop" />
               </div>
               <div class="content">
