--- a/index.html
+++ b/index.html
@@ -1401,14 +1401,20 @@
          
       </section>
 
-      <!-- ROXANA -->
-      <section id="roxana" class="block-wrap">
-        <div class="block-inner">
-          <div class="kicker">Quién te acompaña</div>
-          <div class="h2">Soy Roxana Furman</div>
-          <p class="p-muted">Trabajo en seguridad alimentaria hace más de <strong>30 años</strong>. Me enfoco en hacerlo simple y acompañarte por WhatsApp.</p>
-        </div>
-      </section>
+     <!-- ROXANA -->
+<section id="roxana" class="block-wrap">
+  <div class="block-inner">
+    <div class="kicker">Quién te acompaña</div>
+    <div class="h2">Soy Roxana Furman</div>
+
+    <p class="p-muted">
+      <strong>Licenciada en Tecnología Industrial de Alimentos.</strong><br>
+      Trabajo en seguridad alimentaria hace más de <strong>30 años</strong>, realizando auditorías, asesoramiento y capacitaciones.<br>
+      Te acompaño a gestionar tu carnet de forma simple y por WhatsApp.
+    </p>
+  </div>
+</section>
+
 
       <!-- FAQ -->
       <section id="faq" class="block-wrap">
