--- a/index.html
+++ b/index.html
@@ -1481,7 +1481,7 @@
         </div>
 
         <button class="btn btn-primary" type="submit">
-          Enviar mis datos por WhatsApp
+          Enviar mis datos
         </button>
 
         <div class="consent">
