--- a/index.html
+++ b/index.html
@@ -1396,6 +1396,25 @@
     <div class="logo-slot">
       <img src="logo-lodejesus.webp" alt="Lo de Jesús - Delivery" loading="lazy" />
     </div>
+     <!-- NUEVOS LOGOS -->
+  <div class="logo-slot">
+    <img src="tea_connection.avif" alt="Tea Connection" loading="lazy" />
+  </div>
+
+  <div class="logo-slot">
+    <img src="sushiclub.webp" alt="SushiClub" loading="lazy" />
+  </div>
+
+  <div class="logo-slot">
+    <img src="asia-oriental.png" alt="Asia Oriental" loading="lazy" />
+  </div>
+
+  <div class="logo-slot">
+    <img src="3monos.jpeg" alt="3 Monos" loading="lazy" />
+  </div>
+
+  <div class="logo-slot">
+    <img src="rincon-norteno.jpg" alt="Rincón Norteño" loading="lazy" />
   </div>
 </div>
          
