--- a/index.html
+++ b/index.html
@@ -1415,6 +1415,7 @@
 
   <div class="logo-slot">
     <img src="rincon-norteno.jpg" alt="Rincón Norteño" loading="lazy" />
+    <p style="font-size:12px;color:red">rincon-norteno.jpg</p>
   </div>
 </div>
          
