--- a/index.html
+++ b/index.html
@@ -1453,7 +1453,7 @@
 
             <details>
               <summary>¿Sirve para todo el país? <span class="icon">+</span></summary>
-              <p>Sí. <strong>Es EL carnet oficial con validez en todas las provincias de la República Argentina, incluyendo CABA</strong> (y Provincia de Buenos Aires).</p>
+              <p>Sí. <strong>Si,es el carnet oficial con validez en todas las provincias.</p>
             </details>
 
             <details>
