--- a/index.html
+++ b/index.html
@@ -1443,7 +1443,7 @@
           <div class="faq" aria-label="Preguntas frecuentes">
             <details>
               <summary>¿Qué datos necesito para inscribirme? <span class="icon">+</span></summary>
-              <p>Nombre completo, DNI, CUIL, dirección, email, celular y una selfie + foto del DNI (frente).</p>
+              <p>Nombre completo, DNI, foto DNI (frente) y una selfie de tu rostro.</p>
             </details>
 
             <details>
@@ -1453,7 +1453,7 @@
 
             <details>
               <summary>¿Sirve para todo el país? <span class="icon">+</span></summary>
-              <p>Sí. <strong>Si,es el carnet oficial con validez en todas las provincias.</p>
+              <p>Sí, el carnet tiene validez en todas las provincias.</p>
             </details>
 
             <details>
