--- a/index.html
+++ b/index.html
@@ -931,6 +931,39 @@
   }
 }
 /* =========================
+   SECCIÓN ROXANA
+   ========================= */
+
+.roxana-grid {
+  display: grid;
+  grid-template-columns: 1.2fr 0.8fr;
+  gap: 2.5rem;
+  align-items: center;
+}
+
+.roxana-photo img {
+  width: 100%;
+  max-width: 320px;
+  border-radius: 22px;
+  box-shadow: 0 18px 40px rgba(0,0,0,0.12);
+  object-fit: cover;
+}
+
+/* Mobile */
+@media (max-width: 860px) {
+  .roxana-grid {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .roxana-photo img {
+    margin: 0 auto;
+    max-width: 260px;
+  }
+}
+
+    
+/* =========================
    IMPACTO / TRUST BAR (PRO)
    ========================= */
 
@@ -1418,17 +1451,27 @@
 
      <!-- ROXANA -->
 <section id="roxana" class="block-wrap">
-  <div class="block-inner">
-    <div class="kicker">Quién te acompaña</div>
-    <div class="h2">Soy Roxana Furman</div>
+  <div class="block-inner roxana-grid">
+    
+    <!-- Texto -->
+    <div class="roxana-text">
+      <div class="kicker">Quién te acompaña</div>
+      <div class="h2">Soy Roxana Furman</div>
+      <p class="p-muted">
+        <strong>Licenciada en Tecnología Industrial de Alimentos.</strong><br>
+        Trabajo en seguridad alimentaria hace más de <strong>30 años</strong>, realizando auditorías, asesoramiento y capacitaciones.<br>
+        Te acompaño a gestionar tu carnet de forma simple y por WhatsApp.
+      </p>
+    </div>
 
-    <p class="p-muted">
-      <strong>Licenciada en Tecnología Industrial de Alimentos.</strong><br>
-      Trabajo en seguridad alimentaria hace más de <strong>30 años</strong>, realizando auditorías, asesoramiento y capacitaciones.<br>
-      Te acompaño a gestionar tu carnet de forma simple y por WhatsApp.
-    </p>
+    <!-- Imagen -->
+    <div class="roxana-photo">
+      <img src="roxana.jpg" alt="Roxana Furman - Seguridad Alimentaria">
+    </div>
+
   </div>
 </section>
+
 
 
       <!-- FAQ -->
